[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "thomas@gibfest.dk"},
  {name = "Thomas Steen Rasmussen"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dnspython[doh,dnssec,idna,doq] >= 2.2.1",
    "PyYAML >= 6.0",
    "prometheus-client >= 0.15.0",
]
description = "Prometheus exporter for blackbox-style DNS monitoring"
dynamic = ["version"]
keywords = ["prometheus", "dns", "monitoring"]
license = {text = "BSD 3-Clause License"}
name = "dns_exporter"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
dns_exporter = "dns_exporter.entrypoint:main"

[project.optional-dependencies]
dev = ["twine == 4.0.2", "pre-commit == 3.6.0", "setuptools-scm == 8.0.4", "build==1.0.3"]
test = ["pytest == 8.0.0", "pytest-cov==4.1.0", "tox == 4.12.1", "requests==2.31.0", "pytest-randomly==3.15.0"]
docs = ["Sphinx==7.2.6", "furo==2024.1.29"]

[project.urls]
homepage = "https://github.com/tykling/dns_exporter"
documentation = "https://dnsexporter.readthedocs.org/"

[tool.setuptools_scm]
write_to = "src/dns_exporter/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dns_exporter"]

[tool.pydocstyle]
convention = "google"
match = "src/dns_exporter/"

[tool.coverage.run]
omit = ["*tests*"]
